fix for issue making first loaded image invisible by incorrect margin-top

--- a/image-viewer/extension.css
+++ b/image-viewer/extension.css
@@ -25,13 +25,6 @@ html {
   overflow: hidden;
 }
 
-.imgViewer {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-}
-
 #imageContainer {
   width: 100%;
   height: 100%;
@@ -89,16 +82,6 @@ html {
 
 .iconForeground {
   color: #f2f2f2;
-}
-
-.transparentImageBackground {
-  background: repeating-linear-gradient(
-    45deg,
-    #d5d5d5,
-    #d5d5d5 10px,
-    #a7a7a7 10px,
-    #a7a7a7 20px
-  );
 }
 
 .makeBlackAndWhite {
@@ -160,4 +143,15 @@ html {
 
 .dropdown-menu {
   width: 180px;
+}
+
+.viewer-backdrop {
+  background-color: transparent;
+  /* background: repeating-linear-gradient(
+    45deg,
+    #d5d5d5,
+    #d5d5d5 10px,
+    #a7a7a7 10px,
+    #a7a7a7 20px
+  ); */
 }
